assets/product-card-carousel.css
.product-card-carousel__container {
  max-width: 1440px;
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}

.product-card-carousel__heading {
  font-size: 30px;
  line-height: 145%;
  letter-spacing: 0.01em;
  margin: 0;
}

product-carousel-swiper {
  display: block;
  margin-top: 49px;
}

.card-product-carousel {
  display: block;
  cursor: pointer;
}

.card-product-carousel[data-unavailable="true"] {
  cursor: default;
}

.card-product-carousel__media {
  width: 100%;
  height: 300px;
  overflow: hidden;
  background-color: #f5f5f5;
}

.card-product-carousel__image {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.card-product-carousel__collection {
  display: block;
  font-weight: 400;
  font-size: 10px;
  line-height: 145%;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  margin-top: 20px;
  color: #828282;
}

.card-product-carousel__title {
  font-size: 14px;
  line-height: 22px;
  margin: 3px 0 0;
  color: #111111;
}

.card-product-carousel__description {
  font-size: 12px;
  line-height: 161%;
  letter-spacing: 0;
  margin: 2px 0 0;
  color: #111111;
}

.card-product-carousel__price-row {
  margin-top: 3px;
}

.card-product-carousel__price {
  font-size: 14px;
  line-height: 22px;
  margin: 0;
}

.card-product-carousel__rating {
  font-size: 10px;
  line-height: 128%;
  letter-spacing: 0.07em;
  color: #828282;
}

.card-product-carousel__swatches {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 9px;
  margin-top: 10px;
}

.card-product-carousel__swatch {
  --swatch-input--size: 20px;
  display: flex;
  align-items: center;
  line-height: 0;
}

.card-product-carousel__swatch .swatch-input__input {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.card-product-carousel__swatch .swatch-input__input + .swatch-input__label {
  outline: none;
  padding: 2px;
  border: 1px solid transparent;
}

.card-product-carousel__swatch .swatch-input__input:checked + .swatch-input__label,
.card-product-carousel__swatch .swatch-input__input:active + .swatch-input__label {
  outline: none;
  border-color: #111111;
}

.card-product-carousel__swatch .swatch-input__input + .swatch-input__label:hover,
.card-product-carousel__swatch .swatch-input__input:hover + .swatch-input__label {
  outline: none;
  border-color: transparent;
}

.card-product-carousel__swatch .swatch-input__input:focus-visible + .swatch-input__label {
  outline: none;
  border-color: rgba(0, 0, 0, 0.5);
}

.card-product-carousel__swatch .swatch-input__input:checked:focus-visible + .swatch-input__label,
.card-product-carousel__swatch .swatch-input__input:active:focus-visible + .swatch-input__label {
  outline: none;
  border-color: #111111;
}

.card-product-carousel__swatches-more {
  font-size: 10px;
  line-height: 128%;
  letter-spacing: 0.07em;
  color: #333333;
}

@media screen and (min-width: 750px) {
  .product-card-carousel__container {
    padding-left: 30px;
    padding-right: 30px;
  }

  .product-card-carousel__heading {
    font-size: 50px;
    line-height: 52px;
    letter-spacing: 0;
  }

  .card-product-carousel__media {
    width: 100%;
    height: 438px;
  }
}

@media screen and (min-width: 1440px) {
  .card-product-carousel__media {
    width: 328px;
    height: 438px;
  }
}

